// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders complete footer in narrow terminal (baseline narrow) > complete-footer-narrow 1`] = `
"───────────────────────────────────────────────────────────────────────────────

                [STATUS: ]  MODgemini-  THEMSOTA    ● SYNERGY
  ...s/to/make   STABLE        pro          Premiu    ACTIVE    gemini-pro
  /it/long                                  m                   /model (100%)
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders complete footer with all sections visible (baseline) > complete-footer-wide 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  ...directories/to/make/i [STATUS:     ]  MODEgemini-pr  THEMSOTA        ● SYNERGY            gemini-pro /model (100%
  t/long                    STABLE             o              Premium       ACTIVE             context left)
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with CWD and model info hidden to test alignment (only sandbox visible) > footer-only-sandbox 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

                       [ STATUS: STABLE ]  MODEL gemini-pro  THEME SOTA Premium  ● SYNERGY ACTIVE
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with all optional sections hidden (minimal footer) > footer-minimal 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with only model info hidden (partial filtering) > footer-no-model 1`] = `
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  ...directories/to/make/it/long      [ STATUS: STABLE ]  MODEL gemini-pro  THEME SOTA Premium  ● SYNERGY ACTIVE
"
`;
